<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GetDisciplined</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="slogan">The only app you need to help you stay focused!</string>
    <string name="swipestart">Swipe now and get to work -> </string>

    <string name="discipline">"The distance between dreams and reality is called DISCIPLINE."</string>

    <string name="title_activity_setup">SetupActivity</string>
    <string name="block_apps">Select Apps</string>
    <string name="start_apps">Start Timer</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="Select">Select</string>


    <string name="Likeus">Like us</string>
    <string name="Feedback">Contact us</string>
    <string name="FAQ">FAQ</string>
    <string name="About">About</string>
    <string name="Follow">Follow us</string>



    <string name="Share">Share us</string>











    <string name="security_settings">Security and Settings</string>
    <string name="blacklist_whitelist">Blacklists and Whitelists</string>
    <string name="time_set">Hours</string>
    <string name="pause">Pause Timer</string>
    <string name="Hours">H</string>
    <string name="Minutes">M</string>
    <string name="Second">S</string>

    <string name="search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_apk_list">AppList Demo</string>
    <string name="appicon">Application Icon</string>
    <string name="apkname">Application Name:</string>
    <string name="package_name">Package Name:</string>
    <string name="version">Version:</string>
    <string name="features">Required Features:</string>
    <string name="permissions">Required Permissions:</string>
    <string name="req_version">Taget SDK Version:</string>
    <string name="path_info">Path Info:</string>
    <string name="appsize">Physical Size</string>
    <string name="installed">Installed:</string>
    <string name="modified">Last Modified:</string>


    <string name="loading">Just a sec! :)</string>

    <string name="hint">Search apps...</string>
    <string name="blacklist">Edit Blacklist</string>





    <string-array name="items">
        <item>Simple Holo theme</item>
        <item>Custom style</item>
    </string-array>

    <string name="pref_val_perf_normal">250</string>
    56
    <string name="pref_key_performance">com.twinone.locker.pref.performance</string>


</resources>
