<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >



    <item android:id="@+id/action_overflow"
    android:title="@string/action_settings"
    android:orderInCategory="100"
    android:icon="@drawable/ic_action_overflow"
    app:showAsAction="always" >
    <menu>

        <item
            android:id="@+id/setting_drop"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:icon="@drawable/share_32"

            android:title="@string/Share"/>

        <item
            android:id="@+id/follow_us_drop"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:icon="@drawable/twitter32"

            android:title="@string/Follow"/>

        <item
            android:id="@+id/feedback_drop"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:icon="@drawable/email99"

            android:title="@string/Feedback"/>



    </menu>
    </item>
</menu>
