<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="#ffff3a35"



                tools:context="com.Spicycurryman.GetDisciplined10.app.SetupActivity">

    <TextView
        android:id="@+id/main_text"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="53sp"
        android:textColor="#FFFCEAFF"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/theslogan"
        android:text="@string/slogan"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textColor="#FFFCEAFF"
        android:layout="@+id/main_text"
        android:layout_marginTop="100dp"
        android:layout_alignRight="@+id/main_text"
        android:layout_alignEnd="@+id/main_text"
        android:layout_alignLeft="@+id/main_text"
        android:layout_alignStart="@+id/main_text"/>

    <TextView
        android:id="@+id/swipestart"
        android:text="@string/swipestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#FFFCEAFF"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>


</RelativeLayout>
